// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow rendering 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_0"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        01/12/2018
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`shipment.has_on_carriage is true 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_5"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        01/12/2018
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`shipment.has_pre_carriage is true 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_4"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        01/12/2018
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`shipment.planned_eta is falsy 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_7"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          NaN
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        Invalid date
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`shipment.status !== finished 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_6"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row layout-align-center-center topRight"
  >
    <div
      className="edit layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <i
        className="flex-none fa fa-eye"
      />
       
      <p>
        Modify
      </p>
    </div>
      |  
    <div
      className="check layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <i
        className="flex-none fa fa-check"
      />
       
      <p>
        Accept
      </p>
    </div>
      |  
    <div
      className="trash layout-row layout-align-center-center pointy"
      onClick={[Function]}
    >
      <i
        className="flex-none fa fa-trash"
      />
       
      <p>
        Reject
      </p>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center
    middle_bottom_box smallText"
  >
    <div
      className="flex-20 layout-align-center-start"
    >
      <span
        className="flex-100"
      >
        <b>
          Pick-up Date
        </b>
        <br />
        <span
          className="grey"
        >
          01/12/2018
        </span>
      </span>
    </div>
    <div
      className="flex-20 layout-align-center-start"
    >
      <span
        className="flex-100"
      >
        <b>
          ETD
        </b>
        <br />
        <span
          className="grey"
        >
          12/11/2018
        </span>
      </span>
    </div>
    <div
      className="flex-20 layout-align-center-start"
    >
      <span
        className="flex-100"
      >
        <b>
          ETA
        </b>
        <br />
        <span
          className="grey"
        >
          01/12/2018
        </span>
      </span>
    </div>
    <div
      className="flex-40 layout-align-start-end carriages"
    >
      <div
        className="layout-row layout-align-end-end"
      >
        <i
          className="fa fa-times"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <p>
          Pre-carriage
        </p>
      </div>
      <div
        className="layout-row layout-align-end-end"
      >
        <i
          className="fa fa-times"
          style={
            Object {
              "color": "#E0E0E0",
            }
          }
        />
        <p>
          On-carriage
        </p>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`state.confirm is true 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_2"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <AdminPromptConfirm
    confirm={[Function]}
    deny={[Function]}
    heading="Are you sure?"
    t={[Function]}
    text="This will reject the requested shipment SHIPMENT_IMC_REFERENCE.
        This shipment can still be recovered after being ignored"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        01/12/2018
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-align-start-stretch
          container"
  key="UUID_MOCK_KEY_3"
>
  <hr
    className="flex-100 layout-row hr_divider"
  />
  <div
    className="card_link"
    onClick={[Function]}
  />
  <div
    className="layout-row flex-100 layout-align-space-between-stretch top_box"
  >
    <div
      className="layout-row flex-10 layout-align-center-center routeIcon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "color": "black",
          }
        }
      />
    </div>
    <div
      className="flex-60 layout-row layout-align-start-center hub_name"
    >
      <div
        className="layout-column layout-align-center-start"
      >
        <p>
          From
          : 
          <span>
            SHIPMENT_ORIGIN_HUB
          </span>
        </p>
        <p>
          To
          : 
          <span>
            SHIPMENT_DESTINATION_HUB
          </span>
        </p>
      </div>
    </div>
    <div
      className="layout-row flex-20 layout-align-start-end ett"
    >
      <div>
        <b>
          19
           
          days
        </b>
        <br />
        <span
          className="grey"
          style={
            Object {
              "fontSize": "10px",
            }
          }
        >
          Estimated Transit Time
        </span>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-stretch middle_top_box"
  >
    <div
      className="layout-row flex-50 flex-sm-40 flex-md-40 flex-xl-40 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <b
          className="ref_row_card"
        >
          Ref
          : 
          SHIPMENT_IMC_REFERENCE
        </b>
        <p>
          Placed at
           
          01/11/2018 | 12:14
        </p>
      </div>
    </div>
    <hr />
    <div
      className="layout-row flex-50 flex-sm-60 flex-md-60 flex-xl-60 layout-align-center-center"
    >
      <div
        className="flex-100"
      >
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <div
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-user clip"
              style={
                Object {
                  "color": "black",
                }
              }
            />
          </div>
          <div
            className="flex-80 layout-row layout-align-start-start"
          >
            <h4 />
          </div>
        </div>
        <div
          className="layout-row flex-100 layout-align-start-center"
        >
          <span
            className="flex-10 layout-row layout-align-center-center"
          >
            <i
              className="fa fa-building clip"
              style={
                Object {
                  "color": "black",
                }
              }
            />
          </span>
          <span
            className="flex-80 layout-row layout-align-start-center grey"
          >
            <p />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="layout-row flex-40 layout-align-start-stretch
            middle_bottom_box smallText"
  >
    <div
      className="flex-100 layout-row"
    >
      <b>
        Arrived on
        : 
      </b>
      <span
        className="grey"
      >
        01/12/2018
      </span>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-space-between-center
            bottom_box"
  >
    <div
      className="layout-row flex-65 layout-align-start-center"
    >
      <div
        className="layout-row flex-10"
      >
        <div
          className="layout-row layout-align-center-center"
        >
          <span
            className="smallText"
          >
            <b>
              x
            </b>
            <span
              className="bigText"
            >
              2
            </span>
          </span>
        </div>
      </div>
      <span
        className="flex-35"
      >
        Cargo Items
      </span>
      <span
        className="flex-25 layout-row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Pick-up
        </p>
      </span>
      <span
        className="flex-25 layout row"
      >
        <i
          className="fa fa-check-square clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #DCDBDC,#DCDBDC)",
            }
          }
        />
        <p>
          Delivery
        </p>
      </span>
    </div>
    <div
      className="layout-row flex layout-align-end-end"
    >
      <span
        className="bigText price_style"
      >
        <span>
          87.00
        </span>
        <span>
           
           
        </span>
      </span>
    </div>
  </div>
</div>
`;
